<resources>
    <string name="app_name">ChatApp</string>

    <string name="welcome_to_main_activity">Welcome to main activity</string>
    <string name="start_page_activity_ayush">start page activity ayush</string>
    <string name="register_here">Register Here</string>
    <string name="user_status">User Status</string>
    <string name="user_name">User Name</string>
    <string name="name">Name..</string>


    <string name="create_account">Create Account</string>
    <string name="username">UserName</string>
    <string name="user_profile_status">User Profile Status</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_status_here">Change Status Here...</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="friends_fragment">Friends Fragment</string>
    <string name="requests_fragment">Requests Fragment</string>
    <string name="email">Email..</string>
    <string name="login">Login</string>
    <string name="password">Password..</string>
    <string name="todo">TODO</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>

</resources>
